# api-tests

./: .isort.cfg  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  settings.toml
requests_base/headers/: headers_base.py
src/api/: api_client.py
src/assertions/: assertion_base.py
src/requests_api/: api_v3_req.py
src/utils/: data_generator.py
tests/api_v3/: test_book.py
