[tool.poetry]
name = "autotests-api"
version = "0.0.1"
description = "Autotests for API partner project"
authors = ["rkyselov <roman.kyselov@emergingtravel.com>"]
readme = "README.md"
packages = [{include = "autotests_api"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.4"
dynaconf = "^3.2.3"
aiohttp = "^3.9.1"
pydantic = "^2.5.3"
faker = "^18.13.0"
black = "^23.12.1"
make = "^0.1.6.post2"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
jsonschema = "^4.20.0"
tenacity = "^8.2.3"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
